--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
 		
 		<title>Quan Vu Portfolio</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon-coconut.ico">
-		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="css/style.css">
 
 		
 
