--- a/project1.html
+++ b/project1.html
@@ -58,38 +58,38 @@
 
 
 			<!-- 1 -->
-			<img src="/img/project 1/Frame 1207.jpg" alt="image" width="50%" height="auto">
+			<img src="img/project 1/Frame 1207.jpg" alt="image" width="50%" height="auto">
 			<br>
 
 			<!-- 2 -->
-			<img src="/img/project 1/Frame 1259.jpg" alt="image" width="25%" height="auto">
+			<img src="img/project 1/Frame 1259.jpg" alt="image" width="25%" height="auto">
 			<br>
-			<img src="/img/project 1/Frame 191.jpg" alt="image" width="45%" height="auto">
+			<img src="img/project 1/Frame 191.jpg" alt="image" width="45%" height="auto">
 			<br>
 			
 
 			<!-- 3 -->
-			<img src="/img/project 1/Frame 192.jpg" alt="image" width="60%" height="auto">
+			<img src="img/project 1/Frame 192.jpg" alt="image" width="60%" height="auto">
 			<br>
 
 			<!-- 4 -->
-			<img src="/img/project 1/Frame 194.jpg" alt="image" width="40%" height="auto">
+			<img src="img/project 1/Frame 194.jpg" alt="image" width="40%" height="auto">
 			<br>
 
 			<!-- 5 -->
-			<img src="/img/project 1/Free Concrete Wall Mockup.jpg" alt="image" width="100%" height="auto">
+			<img src="img/project 1/Free Concrete Wall Mockup.jpg" alt="image" width="100%" height="auto">
 			<br>
 
 			<!-- 1 -->
-			<img src="/img/project 1/Mockuppp.png" alt="image" width="40%" height="auto">
+			<img src="img/project 1/Mockuppp.png" alt="image" width="40%" height="auto">
 			<br>
 
 			<!-- 2 -->
-			<img src="/img/project 1/typo.jpg" alt="image" width="20%" height="auto">
+			<img src="img/project 1/typo.jpg" alt="image" width="20%" height="auto">
 			<br>
 
 			<!-- 3 -->
-			<img src="/img/project 1/Vintage Typewriter Mockup.jpg" alt="image" width="60%" height="auto">
+			<img src="img/project 1/Vintage Typewriter Mockup.jpg" alt="image" width="60%" height="auto">
 			<br>
 
 			<!-- 4 -->
