--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- ---------------- FOOTER ---------------- -->
     <div id="Footer">
         <a href="GraphicDesigner.html">
-            <img src="/img/port2.png" alt="Self Photo" width="100%" height="50%">
+            <img src="img/port2.png" alt="Self Photo" width="100%" height="50%">
         </a>
     </div>
 
